--- a/SuperHeroComics-Surf/Podfile
+++ b/SuperHeroComics-Surf/Podfile
@@ -6,6 +6,7 @@ inhibit_all_warnings!
 def utils
     pod 'SwiftGen', '~> 6.1.0'
     pod 'SwiftLint', '~> 0.30.1'
+    pod 'SDWebImage'
 end
 
 def surf_utils
