--- a/SuperHeroComics-Surf/Podfile
+++ b/SuperHeroComics-Surf/Podfile
@@ -7,6 +7,7 @@ def utils
     pod 'SwiftGen', '~> 6.1.0'
     pod 'SwiftLint', '~> 0.30.1'
     pod 'SDWebImage'
+    pod 'RealmSwift'
 end
 
 def surf_utils
